# korwarder

./: .gitignore  Cargo.toml  README.md  TODO.md  build.sh  challenges.md  go.mod  go.sum  korwarder  korwarder.go  korwarder_test.go  main.go  notes.md  pre_commit.sh  pyproject.toml  run.sh  startup.go  startup_test.go
cmd/: cmd  main.go  port_forward.go
kind/: config.yaml  start_kind_cluster.sh
korwarder/: forward.py  korwarder
old_go/: build.sh  go.sum  run.sh
old_go/cmd/: command_builder.go  main.go
scripts/: README.md  config.yaml  create_test_kube.sh  delete_kind_cluster.sh  kindKorwarder.sh  service1.yaml  service2.yaml  start_kind_cluster.sh  testService.sh
