[tool.poetry]
name = "korwarder"
version = "0.1.0"
description = ""
authors = ["DouglasKrouth <douglaskrouth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
urwid = "^2.6.15"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pyflakes = "^3.2.0"
black = "^24.8.0"
isort = "^5.13.2"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# TODO : Set this up when we're ready to bundle the project with pipx
# https://python-poetry.org/docs/pyproject/#script
# [tool.poetry.scripts]
# my_package_cli = 'my_package.console:run'
